# pretty-ls

./: Cargo.toml
pls-args/: Cargo.toml
pls-args/src/: lib.rs  supported_arguments.rs
pls-classifier/: Cargo.toml
pls-classifier/src/: configuration.rs  lib.rs  lookup.rs
pls-sys/: Cargo.toml
pls-sys/src/: command.rs  directory.rs  lib.rs
src/: args.rs  main.rs
src/args/: cmdargs.rs  mod.rs
src/classifier/: configuration.rs  lookup.rs
src/sys/: command.rs  directory.rs  mod.rs
