[package]
name = "pretty-ls"
version = "0.1.0"
authors = ["Ahmed Sakr <ahmed@sakr.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pls-args",
    "pls-sys",
    "pls-classifier"
]

[dependencies]
pls-args = { path = "./pls-args" }
pls-sys = { path = "./pls-sys" }
pls-classifier = { path = "./pls-classifier" }
termion="1.5.5"